--- a/Venues Demo/Info.plist
+++ b/Venues Demo/Info.plist
@@ -58,5 +58,11 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>App what to access location to get nearby venues</string>
+	<key>NSLocationAlwaysUsageDescription</key>
+	<string>App what to access location to get nearby venues</string>
+	<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
+	<string>App what to access location to get nearby venues</string>
 </dict>
 </plist>
