--- a/Venues Demo/Info.plist
+++ b/Venues Demo/Info.plist
@@ -20,6 +20,12 @@
 	<string>1</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
+	<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
+	<string>App what to access location to get nearby venues</string>
+	<key>NSLocationAlwaysUsageDescription</key>
+	<string>App what to access location to get nearby venues</string>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>App what to access location to get nearby venues</string>
 	<key>UIApplicationSceneManifest</key>
 	<dict>
 		<key>UIApplicationSupportsMultipleScenes</key>
@@ -50,6 +56,8 @@
 	<key>UISupportedInterfaceOrientations</key>
 	<array>
 		<string>UIInterfaceOrientationPortrait</string>
+		<string>UIInterfaceOrientationLandscapeLeft</string>
+		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
 	<key>UISupportedInterfaceOrientations~ipad</key>
 	<array>
@@ -58,11 +66,5 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
-	<key>NSLocationWhenInUseUsageDescription</key>
-	<string>App what to access location to get nearby venues</string>
-	<key>NSLocationAlwaysUsageDescription</key>
-	<string>App what to access location to get nearby venues</string>
-	<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
-	<string>App what to access location to get nearby venues</string>
 </dict>
 </plist>
